# f1-race-replay

./: .gitignore  AGENTS.md  README.md  pytest.ini  requirements.txt
pipeline/: README.md  pyproject.toml
pipeline/src/f1_replay_pipeline/: __init__.py  __main__.py  batch_generation.py  browser_chunk_builder.py  browser_delivery_models.py  browser_delivery_orchestration.py  browser_delivery_publication.py  browser_delivery_reader.py  cli.py  (+25 more)
pipeline/tests/: conftest.py  fake_fastf1_session.py  synthetic_fixtures.py  test_batch_generation.py  test_browser_chunk_builder.py  test_browser_delivery_integration.py  test_browser_delivery_publication.py  test_browser_delivery_reader.py  test_browser_delivery_service.py  test_canonical_schema.py  test_canonical_writer.py  test_car_telemetry_adapter.py  test_cli.py  test_dataset_manifest.py  test_fastf1_adapters_metadata.py  test_fastf1_normalization_integration.py  test_fastf1_resolver.py  test_generation_publication.py  test_imports.py  test_laps_stints_adapter.py  test_live_position_calibration.py  test_live_position_progress.py  test_live_position_projection.py  test_live_position_quality.py  test_live_position_ranking.py  test_logical_hashes.py  test_messages_results_adapter.py  test_normalizers.py  test_parquet_io.py  test_pipeline_orchestration.py  test_position_telemetry_adapter.py  test_session_loader.py  test_synthetic_fixtures.py  test_track_assets_generator.py  test_validators.py  test_visual_trajectory_bahrain.py  test_visual_trajectory_experiment.py  test_weather_status_adapter.py  test_writer_regression.py
(+228 files in other folders)
